fix and add
